# metadig-py

./: .gitignore  .gitmodules  README_DATAVERSE.md  pyproject.toml  requirements.txt
docs/: dataverse-getting-started.md  how-validation-works.md  offline-suite-guide.md  quick-test-guide.md
metadig/: checks.py  metadata.py
scripts/: dataverse_to_metadig.py  json_to_eml.py  validate_dataverse_dataset.sh
suites/: metadata-suite.xml
suites/checks/: data.table-text-delimited.normalized.xml  resource.abstract.present.xml  resource.creator.present.xml  resource.license.present-2.0.0.xml  resource.title.present.xml
