[tool.poetry]
name = "metadig"
version = "3.1.1"
description='Metadig Quality Engine Python Library'
authors = ["Peter Slaughter <slaughter@nceas.ucsb.edu>","Jeanette Clark <jclark@nceas.ucsb.edu>", "Dou Mok <douming.mok@gmail.com>"]
readme = "README.md"
packages = [{include = "metadig"}]

[tool.poetry.dependencies]
python = "^3.9"
jep = "4.1.1"
hashstore = { git = "https://github.com/dataoneorg/hashstore.git"}
lxml = "^5.3.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^24"

[tool.poetry.scripts]
metadigpy = "metadig.metadigclient:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
